--- a/r/child_source.Rmd
+++ b/r/child_source.Rmd
@@ -22,9 +22,10 @@ library("patchwork") # combine plots
 #library("cowplot") # export plots
 ```
 
-# Caractéristiques 2018
 
 ```{r data}
+# Caractéristiques 2018
+
 # Import du fichier
 caract <- read.csv(file = "../data/caracteristiques-2018.csv", header = TRUE, sep = ",")
 
@@ -42,9 +43,6 @@ caract <-
   mutate(dep = stri_pad_left(str = dep, width = 3, pad = 0),
          dep = substr(dep, start = 1, stop = 2))
 
-```
-
-```{r recode_factors}
 # Transformation des variables quantitatives en facteur
 caract$Num_Acc <- factor(caract$Num_Acc)
 
@@ -63,15 +61,13 @@ caract$col <- factor(caract$col, levels = c(1,2,3,4,5,6,7), labels = c("Deux vé
 caract$gps <- factor(caract$gps, levels = c("M","A","G","R","Y"), labels = c("Métropole", "Antilles", "Guyane", "Réunion", "Mayotte"))
 ```
 
+```{r}
+
 # Véhicules
 
-
-```{r}
 # Import du fichier
 vehic <- read.csv(file = "../data/vehicules-2018.csv", header = TRUE, sep = ",")
-```
 
-```{r}
 # Transformation des variables quantitatives en facteur
 vehic$Num_Acc <- factor(vehic$Num_Acc)
 
@@ -88,14 +84,13 @@ vehic$choc <- factor(vehic$choc, levels = c(1,2,3,4,5,6,7,8,9), labels = c("Avan
 vehic$manv <- factor(vehic$manv, levels =  c(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24), labels = c("Sans changement de direction","Même sens, même file","Entre 2 files","En marche arrière","A contresens","En franchissant le terre-plein central","Dans le couloir bus, dans le même sens","Dans le couloir bus, dans le sens inverse","En s’insérant","En faisant demi-tour sur la chaussée","Changeant de file A gauche","Changeant de file A droite","Déporté A gauche","Déporté A droite","Tournant A gauche","Tournant A droite","Dépassant A gauche","Dépassant A droite","Traversant la chaussée","Manoeuvre de stationnement","Manoeuvre d’évitement","Ouverture de porte","Arrêté (hors stationnement)","En stationnement (avec occupants)"))
 ```
 
+
+```{r}
 # Usagers
 
-```{r}
 # Import du fichier
 usag <- read.csv(file = "../data/usagers-2018.csv", header = TRUE, sep = ",")
-```
 
-```{r}
 # Transformation des variables quantitatives en facteur
 usag$Num_Acc <- factor(usag$Num_Acc)
 
@@ -128,4 +123,53 @@ usag$locp <- factor(usag$locp, levels = c(1,2,3,4,5,6,7,8), labels = c("Sur chau
 usag$actp <- factor(usag$actp, levels = c(1,2,3,4,5,6,9), labels = c("Se déplaçant Sens véhicule heurtant","Se déplaçant Sens inverse du véhicule","Traversant","Masqué","Jouant – courant","Avec animal","Autre"))
 
 usag$etatp <- factor(usag$etatp, levels = c(1,2,3), labels = c("Seul","Accompagné","En groupe"))
+```
+
+
+
+```{r}
+# Lieux
+
+# Import du fichier
+lieux <- read.csv(file = "../data/lieux-2018.csv", header = TRUE, sep = ",")
+
+# Transformation des variables quantitatives en facteur
+lieux$Num_Acc <- factor(lieux$Num_Acc)
+
+lieux$catr <- factor(lieux$catr, 
+                     levels =  c(1,2,3,4,5,6,9), 
+                     labels = c("Autoroute","Route Nationale","Route Départementale","Voie Communale",
+                                "Hors réseau public","Parc de stationnement ouvert à la circulation publique","autre"))
+
+lieux$circ <- factor(lieux$circ, 
+                     levels =  1:4, 
+                     labels = c("A sens unique","Bidirectionnelle","A chaussées séparées","Avec voies d’affectation variable"))
+
+lieux$vosp <- factor(lieux$vosp, 
+                     levels =  1:3, 
+                     labels = c("Piste cyclable","Banque cyclable","Voie réservée"))
+
+lieux$prof <- factor(lieux$prof, 
+                     levels =  1:4, 
+                     labels = c("Plat","Pente","Sommet de côte","Bas de côte"))
+
+lieux$plan <- factor(lieux$plan, 
+                     levels =  1:4, 
+                     labels = c("Partie rectiligne","En courbe à gauche","En courbe à̀ droite","En « S »"))
+
+
+lieux$surf <- factor(lieux$surf, 
+                     levels =  1:9, 
+                     labels = c("Normale","Mouillée","Flaques","Inondée", "Enneigée", "Boue", "Verglacée", "Corps gras - huile", "Autre"))
+
+lieux$infra <- factor(lieux$infra, 
+                     levels =  1:7, 
+                     labels = c("Souterrain - tunnel","Pont - autopont","Bretelle d’échangeur ou de raccordement",
+                                "Voie ferrée", "Carrefour aménagé", "Zone piétonne", "Zone de péage"))
+
+lieux$situ <- factor(lieux$situ, 
+                     levels =  1:5, 
+                     labels = c("Sur chaussée","Sur bande d'arrêt d'urgence","Sur accotement",
+                                "Sur trottoir", "Sur piste cyclable"))
+
 ```
